--- a/editor2023/index.html
+++ b/editor2023/index.html
@@ -11,6 +11,26 @@
     <input type="number" id="width" value="16">
     <label for="height">Height</label>
     <input type="number" id="height" value="16">
+    <button type="button" data-color="#1a1c2c">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <rect width="20" height="20" fill="#1a1c2c" />
+      </svg>
+    </button>
+    <button type="button" data-color="#ffcd75">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <rect width="20" height="20" fill="#ffcd75" />
+      </svg>
+    </button>
+    <button type="button" data-color="#94b0c2">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <rect width="20" height="20" fill="#94b0c2" />
+      </svg>
+    </button>
+    <button type="button" data-color="#a7f070">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+        <rect width="20" height="20" fill="#a7f070" />
+      </svg>
+    </button>
     <canvas id="c"></canvas>
 
     <script type="module" src="./app.js"></script>
