--- a/editor2023/index.html
+++ b/editor2023/index.html
@@ -32,6 +32,8 @@
       </svg>
     </button>
     <canvas id="c"></canvas>
+    <p>Level Code</p>
+    <textarea id="code" cols="60" rows="4" spellcheck="false"></textarea>
 
     <script type="module" src="./app.js"></script>
   </body>
