--- a/editor2023/index.html
+++ b/editor2023/index.html
@@ -36,9 +36,9 @@
         <rect width="20" height="20" fill="#a7f070" />
       </svg>
     </button>
-    <button type="button" data-color="#566c86">
+    <button type="button" data-color="#41a6f6">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-        <rect width="20" height="20" fill="#566c86" />
+        <rect width="20" height="20" fill="#41a6f6" />
       </svg>
     </button>
     <button type="button" data-color="#b13e53">
